k3s-ha-mysql-observability/mysql-exporter-standalone.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-exporter
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-exporter
  template:
    metadata:
      labels:
        app: mysql-exporter
    spec:
      serviceAccountName: mysql-exporter
      containers:
      - name: mysql-exporter
        image: prom/mysqld-exporter:v0.14.0
        ports:
        - containerPort: 9104
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  namespace: database
  labels:
    app: mysql-exporter
spec:
  ports:
  - name: metrics
    port: 9104
    targetPort: 9104
  selector:
    app: mysql-exporter
